# Spikot

./: .gitignore  CMakeLists.txt  README.md  run.bat
src/: config.h  main.c
src/agent/: agent.c  agent.h
src/app/: diagnostics.c  diagnostics.h  game.c  game.h
src/cat/: genome.c  genome.h  pixel_cat.c  pixel_cat.h
src/env/: world.c  world.h
src/render/: render.c  render.h
src/snn/: network.c  network.h  neuron.h  spatial.c  spatial.h
